# paperly

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml
src/paperly/: __init__.py  app.py  classifier.py  cleanup.py  database.py  paperless.py
src/paperly/static/: app.css
src/paperly/templates/: audit.html  base.html  cleanup.html  document.html  history.html  index.html  learning.html  review.html  settings.html
src/paperly/templates/partials/: apply_all_results.html  audit_diff.html  audit_template_form.html  batch_progress.html  cleanup_results.html  error.html  suggestion.html
